# CmakeSwitchTarget

./: CMakeLists.txt  CMakeSettings.json  README.md
Main/: CMakeLists.txt  main.cpp
ModuleA/: CMakeLists.txt  ModuleA.cpp  ModuleA.h
ModuleB/: CMakeLists.txt  ModuleB.h  ModuleB_PC.cpp  ModuleB_RASPI.cpp
ModuleC/: CMakeLists.txt  ModuleC.cpp  ModuleC.h
cmakes/: PC_LINUX.cmake  PC_WIN.cmake  RASPI_CROSS.cmake  RASPI_NATIVE.cmake  common.cmake
